// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api-with-examples 1`] = `
Object {
  "name": "Simple API overview",
  "requests": Array [
    Object {
      "auth": undefined,
      "body": undefined,
      "headers": Array [],
      "method": "GET",
      "name": "listVersionsv2",
      "params": Array [],
      "path": "/",
      "summary": "List API versions",
    },
    Object {
      "auth": undefined,
      "body": undefined,
      "headers": Array [],
      "method": "GET",
      "name": "getVersionDetailsv2",
      "params": Array [],
      "path": "/v2",
      "summary": "Show API version details",
    },
  ],
  "version": "2.0.0",
}
`;

exports[`callback-example 1`] = `
Object {
  "name": "Callback Example",
  "requests": Array [
    Object {
      "auth": undefined,
      "body": undefined,
      "headers": Array [],
      "method": "POST",
      "name": "/streams - post",
      "params": Array [
        Object {
          "description": "the location where data will be sent.  Must be network accessible
by the source server
",
          "in": "query",
          "key": "callbackUrl",
          "type": "",
          "value": "",
        },
      ],
      "path": "/streams",
      "summary": "",
    },
  ],
  "version": "1.0.0",
}
`;

exports[`link-example 1`] = `
Object {
  "name": "Link Example",
  "requests": Array [
    Object {
      "auth": undefined,
      "body": undefined,
      "headers": Array [],
      "method": "GET",
      "name": "getUserByName",
      "params": Array [
        Object {
          "description": undefined,
          "in": "path",
          "key": "username",
          "type": "path",
          "value": "",
        },
      ],
      "path": "/2.0/users/<<username>>",
      "summary": "",
    },
    Object {
      "auth": undefined,
      "body": undefined,
      "headers": Array [],
      "method": "GET",
      "name": "getRepositoriesByOwner",
      "params": Array [
        Object {
          "description": undefined,
          "in": "path",
          "key": "username",
          "type": "path",
          "value": "",
        },
      ],
      "path": "/2.0/repositories/<<username>>",
      "summary": "",
    },
    Object {
      "auth": undefined,
      "body": undefined,
      "headers": Array [],
      "method": "GET",
      "name": "getRepository",
      "params": Array [
        Object {
          "description": undefined,
          "in": "path",
          "key": "username",
          "type": "path",
          "value": "",
        },
        Object {
          "description": undefined,
          "in": "path",
          "key": "slug",
          "type": "path",
          "value": "",
        },
      ],
      "path": "/2.0/repositories/<<username>>/<<slug>>",
      "summary": "",
    },
    Object {
      "auth": undefined,
      "body": undefined,
      "headers": Array [],
      "method": "GET",
      "name": "getPullRequestsByRepository",
      "params": Array [
        Object {
          "description": undefined,
          "in": "path",
          "key": "username",
          "type": "path",
          "value": "",
        },
        Object {
          "description": undefined,
          "in": "path",
          "key": "slug",
          "type": "path",
          "value": "",
        },
        Object {
          "description": undefined,
          "in": "query",
          "key": "state",
          "type": "",
          "value": "",
        },
      ],
      "path": "/2.0/repositories/<<username>>/<<slug>>/pullrequests",
      "summary": "",
    },
    Object {
      "auth": undefined,
      "body": undefined,
      "headers": Array [],
      "method": "GET",
      "name": "getPullRequestsById",
      "params": Array [
        Object {
          "description": undefined,
          "in": "path",
          "key": "username",
          "type": "path",
          "value": "",
        },
        Object {
          "description": undefined,
          "in": "path",
          "key": "slug",
          "type": "path",
          "value": "",
        },
        Object {
          "description": undefined,
          "in": "path",
          "key": "pid",
          "type": "path",
          "value": "",
        },
      ],
      "path": "/2.0/repositories/<<username>>/<<slug>>/pullrequests/<<pid>>",
      "summary": "",
    },
    Object {
      "auth": undefined,
      "body": undefined,
      "headers": Array [],
      "method": "POST",
      "name": "mergePullRequest",
      "params": Array [
        Object {
          "description": undefined,
          "in": "path",
          "key": "username",
          "type": "path",
          "value": "",
        },
        Object {
          "description": undefined,
          "in": "path",
          "key": "slug",
          "type": "path",
          "value": "",
        },
        Object {
          "description": undefined,
          "in": "path",
          "key": "pid",
          "type": "path",
          "value": "",
        },
      ],
      "path": "/2.0/repositories/<<username>>/<<slug>>/pullrequests/<<pid>>/merge",
      "summary": "",
    },
  ],
  "version": "1.0.0",
}
`;

exports[`petstore 1`] = `
Object {
  "name": "Swagger Petstore",
  "requests": Array [
    Object {
      "auth": undefined,
      "body": undefined,
      "headers": Array [],
      "method": "GET",
      "name": "listPets",
      "params": Array [
        Object {
          "description": "How many items to return at one time (max 100)",
          "in": "query",
          "key": "limit",
          "type": "",
          "value": "",
        },
      ],
      "path": "/pets",
      "summary": "List all pets",
    },
    Object {
      "auth": undefined,
      "body": undefined,
      "headers": Array [],
      "method": "POST",
      "name": "createPets",
      "params": Array [],
      "path": "/pets",
      "summary": "Create a pet",
    },
    Object {
      "auth": undefined,
      "body": undefined,
      "headers": Array [],
      "method": "GET",
      "name": "showPetById",
      "params": Array [
        Object {
          "description": "The id of the pet to retrieve",
          "in": "path",
          "key": "petId",
          "type": "path",
          "value": "",
        },
      ],
      "path": "/pets/<<petId>>",
      "summary": "Info for a specific pet",
    },
  ],
  "version": "1.0.0",
}
`;
